# xmACIS2Py

./: LICENSE  README.md  pyproject.toml  pyproject.yml  setup.py
Documentation/xmACIS1.0/: user_docs.md
Documentation/xmACIS2.0/: analysis_tools.md  average_temperature_departure_summary.md  average_temperature_summary.md  compreheisive_summary.md  cooling_degree_day_summary.md  data_access.md  growing_degree_day_summary.md  heating_degree_day_summary.md  maximum_temperature_summary.md  minimum_temperature_summary.md  precipitation_summary.md
src/xmacis2py/: __init__.py
src/xmacis2py/analysis_tools/: analysis.py
src/xmacis2py/data_access/: get_data.py
src/xmacis2py/graphics/: __init__.py  precipitation.py  temperature.py
src/xmacis2py/utils/: file_funcs.py
xmacis2py/: __init__.py  file_funcs.py  xmacis2py.py  xmacis_data.py
xmacis2py/analysis_tools/: __init__.py  analysis.py
xmacis2py/data_access/: get_data.py
xmacis2py/graphics/: comprehensive.py  xmacis2py.py
xmacis2py/utils/: file_funcs.py
